# dioxus-ntf-test

./: CONTRIBUTING.md  Cargo.toml  README.md  bacon.toml  clippy.toml  flake.nix  git-z.toml  rust-toolchain.toml  taplo.toml  typos.toml
.cargo/: config.toml
ntf-api/: Cargo.toml
ntf-api-types/: Cargo.toml
ntf-api-types/src/: lib.rs
ntf-api/src/: lib.rs
ntf-app/: Cargo.toml
ntf-app/src/: main.rs
ntf-cli/: Cargo.toml  build.rs
ntf-cli/src/: command.rs  lib.rs  main.rs
ntf-cli/src/command/: ack.rs  create.rs  delete.rs  get.rs  hello.rs  helpers.rs  list.rs
ntf-cli/tests/: hello.rs
ntf-poc-helpers/: Cargo.toml
ntf-poc-helpers/src/: helpers.rs  lib.rs
ntf-srv/: Cargo.toml
ntf-srv/src/: main.rs
xtask/src/: main.rs
