[package]
name = "ntf-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Client library for the notification API."

[features]
# NOTE: This feature is enabled in `.vscode/settings.json` and can be used to
# enable some features when editing the code without impacting the default
# features.
rust-analyzer = []

[dependencies]
ntf-api-types = { path = "../ntf-api-types" }
ntf-poc-helpers = { path = "../ntf-poc-helpers" }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json = "1"
thiserror = "2"

[lints]
workspace = true
