[package]
name = "ntf-app"
version.workspace = true
authors.workspace = true
# See https://crates.io/category_slugs
categories = []
edition.workspace = true
homepage.workspace = true
keywords = []
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "An application that can receive and show notifications."

[features]
# NOTE: This feature is enabled in `.vscode/settings.json` and can be used to
# enable some features when editing the code without impacting the default
# features.
rust-analyzer = []
# Dioxus platforms
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dependencies]
dioxus = { version = "0.7.0", features = [] }
ntf-api = { path = "../ntf-api" }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
