[package]
name = "ntf-srv"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A web service for notifications."

[features]
# NOTE: This feature is enabled in `.vscode/settings.json` and can be used to
# enable some features when editing the code without impacting the default
# features.
rust-analyzer = []

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["with-rejection"] }
color-eyre = "0.6"
eyre = "0.6"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
